Hotfix for audio player not showing up correctly with long file name. Made bootstrap changes to the audio players.

--- a/frontend/custom.scss
+++ b/frontend/custom.scss
@@ -46,7 +46,6 @@ body {
 	font-size:22px;
 	cursor:pointer;
 	z-index:10;
-	margin-right:10px;
 }
 .audio-player-progress {
 	position:absolute;
